# nats.hs

./: CHANGELOG.md  README.md  nats-hs.cabal
internal/protocol/: Connection.hs  Info.hs  Parser.hs  Transformers.hs  Types.hs
src/Network/: NatsClient.hs
src/Network/NatsClient/: Client.hs
src/Network/NatsClient/Protocol/: Connect.hs  Info.hs  Parser.hs  Types.hs
test/: Main.hs
test/Unit/: ParserSpec.hs  PingSpec.hs
