cabal-version:      3.0
name:               nats-hs
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis: A NATS client library for Haskell
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Kevin Hoffman

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         autodidaddict@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Network
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

source-repository head
    type:               git
    location:           https://github.com/autodidaddict/nats.hs

common shared
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:
       base
    ghc-options:
       -haddock -W -Wunused-packages

library    
    import:           shared    
    exposed-modules:  Network.NatsClient.Client

    -- Modules included in this library but not exported.
    --other-modules:                     

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1   

    build-tool-depends: hspec-discover:hspec-discover
   
    hs-source-dirs:   src

library nats-hs-internal
    import: shared

    build-depends:    
        megaparsec,
        text,
        bytestring,
        async,
        aeson,
        bytestring-conversion,
        tls,
        network,
        stm,
        mtl,
        unliftio-core
    exposed-modules: 
        Protocol.Parser,
        Protocol.Types,
        Protocol.Info,                   
        Protocol.Transformers,
        Protocol.Connection
    hs-source-dirs:
        internal/
        internal/Protocol

test-suite unit-test
    import:           shared

    -- Modules included in this executable, other than Main.
--    other-modules:
        

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test/Unit
    main-is:          Spec.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        HUnit,        
        nats-hs,
        nats-hs-internal,
        hspec,
        stm,
        bytestring,
        megaparsec,
        text

    build-tool-depends: hspec-discover:hspec-discover

    other-modules:        
        PingSpec
